EG-44: Relay OAR uploads to S3. Now properly reading configuration from eg.properties (both for the REST API and Monitor).
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@250 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/config/monitor.config
+++ b/platforms/private-lan-platform/config/monitor.config
@@ -11,6 +11,8 @@ import org.rioproject.fdh.FaultDetectionHandlerFactory;
 import org.rioproject.monitor.DeployHandler;
 import org.rioproject.monitor.FileSystemOARDeployHandler;
 import com.elasticgrid.platforms.ec2.monitor.S3OARDeployHandler;
+import com.elasticgrid.utils.amazon.AWSUtils;
+import com.elasticgrid.platforms.ec2.config.EC2Configuration;
 
 /* --------------------------------------------------------------------------
  * Declare Provision Monitor properties
@@ -58,13 +60,11 @@ org.rioproject.monitor {
     };
 
     /* Configure DeployHandlers for the Monitor to use */
-    // TODO: make sure the S3 bucket is parameterized
     deployMonitorPeriod = 30000;
     deployDir = "${RIO_HOME}/deploy";
     deployHandlers = new DeployHandler[] {
                             new FileSystemOARDeployHandler(new File(deployDir)),
-                            // TODO: does it makes sense to use this DeployHandler in the private LAN platform?
-                            new S3OARDeployHandler("elastic-grid-drop-target", new File(deployDir))
+                            new S3OARDeployHandler(AWSUtils.getDropBucket(), new File(deployDir))
     };
     
     /* Configure a FaultDetectionHandler for the ProvisionMonitor */
