git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@254 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -30,7 +30,7 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.mathieucarbou.mojo</groupId>
+                <groupId>com.google.code.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <configuration>
                     <header>${basedir}/../etc/header.txt</header>
