--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -161,7 +161,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.mathieucarbou.mojo</groupId>
+                <groupId>com.google.code.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <configuration>
                     <header>${basedir}/../etc/header.txt</header>
