EG-49: the installer build process is now working fine on Unix machines too.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@257 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -114,6 +114,8 @@
                         <descriptor>assembly.xml</descriptor>
                     </descriptors>
                     <finalName>elastic-grid-${pom.version}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>
                 </configuration>
 				<executions>
 					<execution>
