EG-49: the installer build process is now working fine on Unix machines too.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@258 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -197,7 +197,7 @@
                 <artifactId>izpack-maven-plugin</artifactId>
                 <configuration>
                     <izpackBasedir>${staging.dir}</izpackBasedir>
-                    <!--<customPanelDirectory>${staging.dir}</customPanelDirectory>-->
+                    <customPanelDirectory>${staging.dir}</customPanelDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -205,6 +205,9 @@
                         <goals>
                             <goal>izpack</goal>
                         </goals>
+                        <configuration>
+                            <installerFile>${project.build.directory}/elastic-grid-${pom.version}-installer.jar</installerFile>
+                        </configuration>
                     </execution>
                 </executions>
                 <dependencies>
