--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -78,6 +78,23 @@
 			<version>${pom.version}</version>
 		</dependency>
 
+        <!-- Typica dependencies -->
+        <dependency>
+            <groupId>com.google.code.typica</groupId>
+            <artifactId>typica</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.1.6</version>
+        </dependency>
+
         <dependency>
             <groupId>stax</groupId>
             <artifactId>stax-api</artifactId>
@@ -190,6 +207,21 @@
                             </tasks>
                         </configuration>
                     </execution>
+                    <!--<execution>-->
+                        <!--<id>create-izpack-panels</id>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>run</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<tasks>-->
+                                <!--<copy file="${project.build.directory}/private-lan-platform-0.8.3.jar"-->
+                                      <!--tofile="${staging.dir}/bin/panels/com.elasticgrid.tools.installer.AWSCredentialsPanel.jar"/>-->
+                                <!--<copy file="${project.build.directory}/private-lan-platform-0.8.3.jar"-->
+                                      <!--tofile="${staging.dir}/bin/panels/com.elasticgrid.tools.installer.ElasticGridHelloPanel.jar"/>-->
+                            <!--</tasks>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
                 </executions>
             </plugin>
             <plugin>
@@ -221,9 +253,24 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>codehaus-snapshots</id>
+            <url>http://snapshots.repository.codehaus.org</url>
+        </repository>
+    </repositories>
+
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<id>codehaus-snapshots</id>-->
+            <!--<url>http://snapshots.repository.codehaus.org</url>-->
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
+
     <properties>
         <staging.dir>${project.build.directory}/staging</staging.dir>
-        <izpack-release>4.2.1</izpack-release>
+        <izpack-release>4.3.0-SNAPSHOT</izpack-release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
