--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -55,6 +55,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
+                        <phase>process-sources</phase>
                     </execution>
                 </executions>
             </plugin>
