--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -186,6 +186,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
+                        <phase>process-sources</phase>
                     </execution>
                 </executions>
             </plugin>
