--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -201,6 +201,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
+                        <phase>process-sources</phase>
                     </execution>
                 </executions>
             </plugin>
