--- a/platforms/amazon-ec2-platform/pom.xml
+++ b/platforms/amazon-ec2-platform/pom.xml
@@ -15,6 +15,13 @@
     </prerequisites>
 
     <dependencies>
+        <!-- Private LAN platofrm dependency -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>private-lan-platform</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Applications dependencies -->
 		<dependency>
 			<groupId>com.elasticgrid.applications</groupId>
@@ -97,24 +104,26 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
-                    <finalName>elastic-grid-${pom.version}</finalName>
-                </configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id> <!-- this is used for inheritance merges -->
-						<phase>package</phase> <!-- append to the packaging phase. -->
-						<goals>
-							<goal>attached</goal> <!-- goals == mojos -->
-						</goals>
-					</execution>
-				</executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<artifactId>maven-assembly-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<descriptors>-->
+                        <!--<descriptor>assembly.xml</descriptor>-->
+                    <!--</descriptors>-->
+                    <!--<finalName>elastic-grid-${pom.version}</finalName>-->
+                    <!--<appendAssemblyId>false</appendAssemblyId>-->
+                    <!--<ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>-->
+                <!--</configuration>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>make-assembly</id> --><!-- this is used for inheritance merges -->
+						<!--<phase>package</phase> --><!-- append to the packaging phase. -->
+						<!--<goals>-->
+							<!--<goal>attached</goal> --><!-- goals == mojos -->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -134,6 +143,25 @@
                                 </requireProperty>
                             </rules>
                             <fail>true</fail>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <id>unzip-private-lan-platform</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <unzip dest="${basedir}/target/elastic-grid-${pom.version}"
+                                       src="${user.home}/.m2/repository/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-0.8.3-bin.tar.gz"/>
+                            </tasks>
                         </configuration>
                     </execution>
                 </executions>
