--- a/platforms/amazon-ec2-platform/pom.xml
+++ b/platforms/amazon-ec2-platform/pom.xml
@@ -20,6 +20,7 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>private-lan-platform</artifactId>
             <version>${pom.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Applications dependencies -->
@@ -159,6 +160,7 @@
                         </goals>
                         <configuration>
                             <tasks>
+                                <mkdir dir="${basedir}/target"/>
                                 <gunzip dest="${basedir}/target/elastic-grid-${pom.version}.tar"
                                         src="${user.home}/.m2/repository/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar"/>
                                 <untar dest="${basedir}/target/private-lan-platform"
