git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@281 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/amazon-ec2-platform/pom.xml
+++ b/platforms/amazon-ec2-platform/pom.xml
@@ -161,8 +161,9 @@
                         <configuration>
                             <tasks>
                                 <mkdir dir="${basedir}/target"/>
+                                <echo>${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar</echo>
                                 <gunzip dest="${basedir}/target/elastic-grid-${pom.version}.tar"
-                                        src="${user.home}/.m2/repository/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar"/>
+                                        src="${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar"/>
                                 <untar dest="${basedir}/target/private-lan-platform"
                                        src="${basedir}/target/elastic-grid-${pom.version}.tar"/>
                             </tasks>
