--- a/platforms/amazon-ec2-platform/pom.xml
+++ b/platforms/amazon-ec2-platform/pom.xml
@@ -161,9 +161,9 @@
                         <configuration>
                             <tasks>
                                 <mkdir dir="${basedir}/target"/>
-                                <echo>${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar</echo>
+                                <echo>${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.tar.gz</echo>
                                 <gunzip dest="${basedir}/target/elastic-grid-${pom.version}.tar"
-                                        src="${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.jar"/>
+                                        src="${settings.localRepository}/com/elasticgrid/private-lan-platform/${pom.version}/private-lan-platform-${pom.version}.tar.gz"/>
                                 <untar dest="${basedir}/target/private-lan-platform"
                                        src="${basedir}/target/elastic-grid-${pom.version}.tar"/>
                             </tasks>
