Bunch of modifications. Hoping this won't break much code 'cause IDEA doesn't work with Subversion 1.6 and I don't know *yet* how to revert to Subversion 1.5.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@303 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -136,6 +136,11 @@
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>stax</groupId>
+            <artifactId>stax-api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
 
         <!-- Rio dependencies -->
         <dependency>
@@ -199,8 +204,9 @@
     <!--<build>-->
         <!--<plugins>-->
             <!--<plugin>-->
-                <!--<groupId>com.mathieucarbou.mojo</groupId>-->
+                <!--<groupId>com.google.code.maven-license-plugin</groupId>-->
                 <!--<artifactId>maven-license-plugin</artifactId>-->
+                <!--<version>1.4.0</version>-->
                 <!--<configuration>-->
                     <!--<header>${basedir}/../../etc/header.txt</header>-->
                     <!--<quiet>false</quiet>-->
