--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -32,6 +32,7 @@
             <plugin>
                 <groupId>com.google.code.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
+                <version>1.4.0</version>
                 <configuration>
                     <header>${basedir}/../etc/header.txt</header>
                     <quiet>false</quiet>
