--- a/modules/elastic-grid-ui/pom.xml
+++ b/modules/elastic-grid-ui/pom.xml
@@ -49,7 +49,21 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.9</version>
+            <version>1.2.15</version>
+	    <exclusions>
+		<exclusion>
+		    <groupId>com.sun.jmx</groupId>
+		    <artifactId>jmxri</artifactId>
+		</exclusion>
+		<exclusion>
+		    <groupId>com.sun.jdmk</groupId>
+		    <artifactId>jmxtools</artifactId>
+		</exclusion>
+		<exclusion>
+		    <groupId>javax.jms</groupId>
+		    <artifactId>jms</artifactId>
+		</exclusion>
+	    </exclusions>
         </dependency>
 
     </dependencies>
@@ -59,7 +73,7 @@
             <plugin>
                 <groupId>org.codehaus.groovy.maven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
-                <version>1.0-rc-3</version>
+                <version>1.0-rc-5</version>
                 <executions>
                     <execution>
                         <goals>
