--- a/modules/private-lan-provisioner/pom.xml
+++ b/modules/private-lan-provisioner/pom.xml
@@ -57,6 +57,7 @@
             <plugin>
                 <groupId>org.codehaus.groovy.maven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
+                <version>1.0-rc-5</version>
                 <executions>
                     <execution>
                         <goals>
