--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -56,6 +56,7 @@
             <plugin>
                 <groupId>org.codehaus.groovy.maven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
+                <version>1.0-rc-5</version>
                 <executions>
                     <execution>
                         <goals>
