git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@311 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.elasticgrid</groupId>
     <artifactId>applications</artifactId>
     <packaging>pom</packaging>
-    <name>Modules</name>
+    <name>Applications</name>
     <prerequisites>
         <maven>2.0.8</maven>
     </prerequisites>
