Fixed broken FreeMarker configuration for the REST API.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@312 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-core/src/main/resources/log4j.properties
+++ b/modules/elastic-grid-core/src/main/resources/log4j.properties
@@ -23,11 +23,13 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 # Elastic Grid loggers
-log4j.logger.com.elasticgrid=DEBUG
+log4j.logger.com.elasticgrid=INFO
 
 # Rio and Jini loggers
-log4j.logger.org.rioproject=WARN
-log4j.logger.org.rioproject.cybernode=WARN
+log4j.logger.org.rioproject=INFO
+log4j.logger.org.rioproject.core.ClassBundle=WARN
+log4j.logger.org.rioproject.boot=INFO
+#log4j.logger.org.rioproject.cybernode=WARN
 log4j.logger.net.jini=WARN
 log4j.logger.com.sun.jini=WARN
 
