CLI: trying to get OAR upload to REST server to work, so that the REST server relay the upload to S3.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@317 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-cli/src/main/resources/log4j.properties
+++ b/modules/elastic-grid-cli/src/main/resources/log4j.properties
@@ -18,7 +18,6 @@
 
 # Niveau de log root WARN et un seul appender (CONSOLE)
 log4j.rootLogger=WARN, CONSOLE
-log4j.logger.com.xerox=DEBUG
 
 # CONSOLE est un ConsoleAppender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -26,3 +25,8 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 # CONSOLE utilise un PatternLayout
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+
+log4j.logger.com.xerox=DEBUG
+#log4j.logger.org.apache=DEBUG
+log4j.logger.org.restlet=DEBUG
+log4j.logger.com.noelios=DEBUG
