REST API: fixed OAR upload relay to S3.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@319 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-core/src/main/resources/log4j.properties
+++ b/modules/elastic-grid-core/src/main/resources/log4j.properties
@@ -32,11 +32,13 @@ log4j.logger.org.rioproject.boot=INFO
 #log4j.logger.org.rioproject.cybernode=WARN
 log4j.logger.net.jini=WARN
 log4j.logger.com.sun.jini=WARN
+log4j.logger.sun.rmi=WARN
 
 # Spring loggers
 log4j.logger.org.springframework=WARN
 
 # Restlet loggers
-log4j.logger.com.noelios=FATAL
-log4j.logger.org.restlet=DEBUG
+log4j.logger.com.noelios=INFO
+log4j.logger.org.restlet=INFO
 log4j.logger.org.restlet.SpringComponent=WARN
+log4j.logger.org.mortbay=INFO
