Change license name
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@330 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <licenses>
         <license>
-            <name>GNU Lesser General Public License 3</name>
+            <name>Affero General Public License</name>
             <url>LICENSE.txt</url>
         </license>
     </licenses>
