--- a/modules/elastic-grid-cli/src/main/resources/log4j.properties
+++ b/modules/elastic-grid-cli/src/main/resources/log4j.properties
@@ -30,3 +30,4 @@ log4j.logger.com.xerox=DEBUG
 #log4j.logger.org.apache=DEBUG
 log4j.logger.org.restlet=DEBUG
 log4j.logger.com.noelios=DEBUG
+log4j.logger.org.springframework.beans.factory.config.PropertyPlaceholderConfigurer=FATAL
