--- a/modules/elastic-grid-core/src/main/resources/log4j.properties
+++ b/modules/elastic-grid-core/src/main/resources/log4j.properties
@@ -36,6 +36,7 @@ log4j.logger.sun.rmi=WARN
 
 # Spring loggers
 log4j.logger.org.springframework=WARN
+log4j.logger.org.springframework.beans.factory.config.PropertyPlaceholderConfigurer=FATAL
 
 # Restlet loggers
 log4j.logger.com.noelios=INFO
