--- a/platforms/amazon-ec2-platform/pom.xml
+++ b/platforms/amazon-ec2-platform/pom.xml
@@ -112,7 +112,7 @@
                         <descriptor>assembly.xml</descriptor>
                     </descriptors>
                     <finalName>elastic-grid-${pom.version}</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <appendAssemblyId>true</appendAssemblyId>
                     <ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>
                 </configuration>
 				<executions>
