Added JetS3t dependency for CLI.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@353 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -52,6 +52,12 @@
             <version>${restlet-release-version}</version>
         </dependency>
 
+        <!-- Amazon S3 dependencies -->
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+        </dependency>
+
         <!-- Command line parsing -->
         <dependency>
             <groupId>args4j</groupId>
