Added EC2 provisioner dependency for CLI.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@355 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -27,6 +27,13 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <!-- Elastic Grid EC2 provisioner -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>amazon-ec2-provisioner</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Rio dependencies -->
         <dependency>
             <groupId>org.rioproject.tools</groupId>
