Add ec2.mode, allows you to set whetehr you are LAN or EC2 based
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@361 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-manager/pom.xml
+++ b/modules/elastic-grid-manager/pom.xml
@@ -27,6 +27,20 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <!-- Elastic Grid Core -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-core</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <!-- Elastic Grid Utils -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-utils</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Rio dependencies -->
         <dependency>
             <groupId>org.rioproject</groupId>
