Refactored the S3 handler so that it can be declared easily from the command-line.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@364 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-core/pom.xml
+++ b/modules/elastic-grid-core/pom.xml
@@ -14,11 +14,11 @@
     <dependencies>
 
         <!-- Elastic Grid Utilities -->
-        <!--<dependency>-->
-            <!--<groupId>${pom.groupId}</groupId>-->
-            <!--<artifactId>elastic-grid-utils</artifactId>-->
-            <!--<version>${pom.version}</version>-->
-        <!--</dependency>        -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-utils</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 
         <!-- Rio dependencies -->
         <dependency>
@@ -42,6 +42,12 @@
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
+        </dependency>
+
+        <!-- Amazon S3 dependencies -->
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
         </dependency>
 
         <!-- Spring dependencies -->
