Added needed deps for Groovy configuration files.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@409 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -78,6 +78,29 @@
 			<version>${pom.version}</version>
 		</dependency>
 
+        <!-- Rio dependencies -->
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>boot</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Jini 2.1 dependencies -->
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-lib</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Typica dependencies -->
         <dependency>
             <groupId>com.google.code.typica</groupId>
