Added needed deps for Groovy configuration files.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@410 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>boot</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>monitor</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!-- Jini 2.1 dependencies -->
         <dependency>
             <groupId>net.jini</groupId>
