update configs and dependencies
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@411 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>jsk-platform</artifactId>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+            <groupId>com.sun.jini</groupId>
+            <artifactId>tools</artifactId>
+        </dependency>
+        
 
         <!-- Typica dependencies -->
         <dependency>
