Added needed deps for Groovy configuration files.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@412 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -105,11 +105,11 @@
             <artifactId>jsk-platform</artifactId>
             <scope>provided</scope>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>com.sun.jini</groupId>
             <artifactId>tools</artifactId>
+            <scope>provided</scope>
         </dependency>
-        
 
         <!-- Typica dependencies -->
         <dependency>
